[package]
name = "miniaturs_shared"
version = "0.1.0"
edition = "2021"
description = "Shared library between server and client"
license = "MIT"
documentation = "https://docs.rs/miniaturs_shared"
keywords = ["image", "manipulation"]

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
hmac = "0.12"
base64 = "0.22"
sha1 = "0.10"
thiserror = "1.0"
